--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+
+@font-face {
+  font-family: 'Julius';
+  src: url(/fonts/JuliusSansOne-Regular.ttf);
+}
+
 body {
   padding: 0;
   margin: 0;
