--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+
+.icon-animate{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+}
+.icon-animate-scrolled{
+    top: 0;
+    left: 0;
+    width: 40%;
+    transition: 0.7s ease, top 0.7s ease, left 0.7s ease;
+    
+}
+
 .grid-layout{
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr)
