--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 
 .icon-animate{
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70%;
+    width: 80%;
 }
 .icon-animate-scrolled{
+    position: fixed;
     top: 0;
     left: 0;
     width: 40%;
